objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship for Address Book.</description>
        <inlineHelpText>Inputted Address book for the Event.</inlineHelpText>
        <label>Address Book</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>End Date and Time of the Event</description>
        <inlineHelpText>Input when will the event exactly ends.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <description>A unique external ID for the Number of the Events.</description>
        <displayFormat>Event-{0000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Event Number.</inlineHelpText>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field for Event Organizer.</description>
        <inlineHelpText>Input who is the organizer of the Event.</inlineHelpText>
        <label>Event Organizer</label>
        <referenceTo>Event_Orginizer__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                    <default>true</default>
                    <label>In Person</label>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Event is Live or not.</description>
        <inlineHelpText>Is the event on-going or valid?</inlineHelpText>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <description>Address book Verification</description>
        <formula>Address_Book__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check if the Address of the event is Verified</inlineHelpText>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <description>Field on how many seats is accomodated by the Event</description>
        <inlineHelpText>Maximum capacity of the event.</inlineHelpText>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Attending__c</fullName>
        <description>Total Number of people attending the event.</description>
        <inlineHelpText>Total number of people attending the event.</inlineHelpText>
        <label>Number of People Attending</label>
        <summaryForeignKey>Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Event is occuring again.</description>
        <inlineHelpText>If the event will happen again, please put check.</inlineHelpText>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <description>Remaining Seats for the event.</description>
        <formula>Max_Seats__c  -  Number_of_People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining seats for the event.</inlineHelpText>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Start Date and Time of the Event.</description>
        <inlineHelpText>Starting date and time of the event.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Deleted&apos;) , (IMAGE(&quot;https://www.pngitem.com/pimgs/m/508-5080910_red-flag-red-flag-waving-gif-hd-png.png&quot;,&quot;Red Flag&quot;, 100,100)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist for event status.</description>
        <inlineHelpText>Status of the event.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_DateTime_must_be_atleast_1_day_ahead</fullName>
        <active>true</active>
        <description>End Date/Time must be at-least 1 day ahead of Start Date/Time</description>
        <errorConditionFormula>AND( DATEVALUE( End_Date_Time__c ) &lt;  DATEVALUE( Start_Date_Time__c ) + 1 , NOT( ISNULL(End_Date_Time__c ) ))</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Type_In_Person</fullName>
        <active>true</active>
        <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;In-person&apos;) ,   (ISBLANK( Address_Book__c ) ) )</errorConditionFormula>
        <errorDisplayField>Address_Book__c</errorDisplayField>
        <errorMessage>Event Type is In Person. Please input an Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Validation_Rule_If_Not_Checked</fullName>
        <active>true</active>
        <description>If Recurring? checkbox is checked then user must need to fill Frequency field.</description>
        <errorConditionFormula>AND(
Recurring__c = False,
NOT(ISBLANK(TEXT( Frequency__c )))
)</errorConditionFormula>
        <errorDisplayField>Recurring__c</errorDisplayField>
        <errorMessage>Recurring not checked. Cannot select Frequency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Virtual_Value_Selected</fullName>
        <active>true</active>
        <description>If Virtual is Selected as Value for Event Type field then Prevent User to Select Location on Event Record.</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;Virtual&apos;) ,   NOT(ISBLANK( Address_Book__c ) ) )</errorConditionFormula>
        <errorDisplayField>Address_Book__c</errorDisplayField>
        <errorMessage>The Event Type is Virtual. You cannot set an Address.</errorMessage>
    </validationRules>
</CustomObject>